--- a/src/app/components/eventos/eventos.component.html
+++ b/src/app/components/eventos/eventos.component.html
@@ -119,6 +119,7 @@
           </li>
 
 
+          <!--
 
           <li>
             <a class="uk-accordion-title"
@@ -133,13 +134,14 @@
 
           <li>
             <a class="uk-accordion-title"
-              style=" font-family: 'Roboto'; font-size: 25px; font-weight: 300; color: rgb(167, 167, 167);">Marzo 2019
+              style=" font-family: 'Roboto'; font-size: 25px; font-weight: 300; color: rgb(167, 167, 167);">Enero 2019
             </a>
             <div class="uk-accordion-content">
               
             </div>
           </li>
 
+          -->
 
 
 
