--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,9 +19,9 @@
 
 
         <li>
-          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+          <div class="uk-card uk-card-default" style="border-radius: 1.5em;">
             <div class="uk-card-media-top">
-              <img routerLink="/eventos" style="border-radius: 3em 3em 0em 0em;" src="assets/eventos/ley1952.png" alt="">
+              <img routerLink="/eventos" style="border-radius: 1.5em 1.5em 0em 0em;" src="assets/eventos/ley1952.png" alt="">
             </div>
             <div class="uk-card-body">
               <h3 class="uk-card-title">
@@ -39,49 +39,23 @@
 
 
         <li>
-          <div class="uk-card uk-card-default" style="border-radius: 3em;">
+          <div class="uk-card uk-card-default" style="border-radius: 1.5em;">
             <div class="uk-card-media-top">
-              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
+              <img routerLink="/eventos" style="border-radius: 1.5em 1.5em 0em 0em;" src="assets/eventos/eventos.png" alt="">
             </div>
             <div class="uk-card-body">
-              <h3 class="uk-card-title">Headline</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+              <h3 class="uk-card-title">
+                Eventos
+              </h3>
+              <p>
+                <strong><a routerLink="/eventos" style="color: rgb(114, 114, 114)">
+                  Todos los eventos aquí
+                </a></strong><br />
+              </p>
             </div>
           </div>
         </li>
-        <li>
-          <div class="uk-card uk-card-default" style="border-radius: 3em;">
-            <div class="uk-card-media-top">
-              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
-            </div>
-            <div class="uk-card-body">
-              <h3 class="uk-card-title">Headline</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="uk-card uk-card-default" style="border-radius: 3em;">
-            <div class="uk-card-media-top">
-              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
-            </div>
-            <div class="uk-card-body">
-              <h3 class="uk-card-title">Headline</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-          </div>
-        </li>
-        <li>
-          <div class="uk-card uk-card-default" style="border-radius: 3em;">
-            <div class="uk-card-media-top">
-              <img style="border-radius: 3em 3em 0em 0em;" src="https://getuikit.com/docs/images/photo.jpg" alt="">
-            </div>
-            <div class="uk-card-body">
-              <h3 class="uk-card-title">Headline</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-          </div>
-        </li>
+
 
 
       </ul>
